--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240126031726">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240126134155">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -260,10 +260,10 @@
 						Вопрос-ответ
 					</h1>
 					<div data-tabs class="faq__tabs tabs-faq">
-						<nav data-tabs-titles class="tabs-faq__navigation">
+						<nav data-tabs-titles class="tabs-faq__navigation ">
 							<button type="button" class="tabs-faq__title _tab-active"><img src="img/faq/plastic.png" alt="image"><span>Пластика</span></button>
-							<button type="button" class="tabs-faq__title "><img src="img/faq/plastic.png" alt="image"><span>Пластика</span></button>
-							<button type="button" class="tabs-faq__title "><img src="img/faq/plastic.png" alt="image"><span>Пластика</span></button>
+							<button type="button" class="tabs-faq__title "><img src="img/faq/cosmetology.png" alt="image"><span>Косметология</span></button>
+							<button type="button" class="tabs-faq__title "><img src="img/faq/gynecology.png" alt="image"><span>Гинекология</span></button>
 						</nav>
 						<div data-tabs-body class="tabs-faq__content">
 							<div class="tabs-faq__body faq-category">
@@ -272,8 +272,20 @@
 										<summary class="faq-category__title spollers__title">Увеличение груди</summary>
 										<div class="faq-category__body question-block spollers__content">
 											<details class="question-block__item">
-												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
-												<div class="question-block__body">Контент спойлера</div>
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<div class="question-block__body">Методики, применяемые в нашей клинике, сводят такой риск к минимуму. Молочная железа во время коррекции либо не повреждается, либо ее повреждения незначительны. Так что сама операция на грудное вскармливание большого влияния не оказывает.</div>
+											</details>
+											<details class="question-block__item">
+												<summary class="question-block__title">Какие анализы сдают перед операцией по увеличению груди?</summary>
+												<div class="question-block__body">Текст</div>
+											</details>
+											<details class="question-block__item">
+												<summary class="question-block__title">Остаются ли шрамы после увеличения груди?</summary>
+												<div class="question-block__body">Текст</div>
+											</details>
+											<details class="question-block__item">
+												<summary class="question-block__title">Какой период реабилитации после проведенной операции по увеличению груди?</summary>
+												<div class="question-block__body">Текст</div>
 											</details>
 										</div>
 									</details>
@@ -281,7 +293,7 @@
 										<summary class="faq-category__title spollers__title">Грудные импланты</summary>
 										<div class="faq-category__body question-block spollers__content">
 											<details class="question-block__item">
-												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
 												<div class="question-block__body">Контент спойлера</div>
 											</details>
 										</div>
@@ -290,7 +302,7 @@
 										<summary class="faq-category__title spollers__title">Коррекция асимметрии</summary>
 										<div class="faq-category__body question-block spollers__content">
 											<details class="question-block__item">
-												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
 												<div class="question-block__body">Контент спойлера</div>
 											</details>
 										</div>
@@ -299,7 +311,7 @@
 										<summary class="faq-category__title spollers__title">Подтяжка груди (мастопексия)</summary>
 										<div class="faq-category__body question-block spollers__content">
 											<details class="question-block__item">
-												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
 												<div class="question-block__body">Контент спойлера</div>
 											</details>
 										</div>
@@ -308,7 +320,7 @@
 										<summary class="faq-category__title spollers__title">Интимная пластика</summary>
 										<div class="faq-category__body question-block spollers__content">
 											<details class="question-block__item">
-												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
 												<div class="question-block__body">Контент спойлера</div>
 											</details>
 										</div>
@@ -317,7 +329,7 @@
 										<summary class="faq-category__title spollers__title">Подтяжка лица</summary>
 										<div class="faq-category__body question-block spollers__content">
 											<details class="question-block__item">
-												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
 												<div class="question-block__body">Контент спойлера</div>
 											</details>
 										</div>
@@ -326,7 +338,7 @@
 										<summary class="faq-category__title spollers__title">Полная абдоминопластика</summary>
 										<div class="faq-category__body question-block spollers__content">
 											<details class="question-block__item">
-												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
 												<div class="question-block__body">Контент спойлера</div>
 											</details>
 										</div>
@@ -335,20 +347,143 @@
 										<summary class="faq-category__title spollers__title">Ринопластика</summary>
 										<div class="faq-category__body question-block spollers__content">
 											<details class="question-block__item">
-												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливанию после увеличения груди?</summary>
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
 												<div class="question-block__body">Контент спойлера</div>
 											</details>
 										</div>
 									</details>
 								</div>
 							</div>
-							<div class="tabs-faq__body">
+							<div class="tabs-faq__body faq-category">
+								<div data-spollers class="faq-category__spollers spollers">
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Интимная пластика</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
+												<div class="question-block__body">Методики, применяемые в нашей клинике, сводят такой риск к минимуму. Молочная железа во время коррекции либо не повреждается, либо ее повреждения незначительны. Так что сама операция на грудное вскармливание большого влияния не оказывает.</div>
+											</details>
+											<details class="question-block__item">
+												<summary class="question-block__title">Какие анализы сдают перед операцией по увеличению груди?</summary>
+												<div class="question-block__body">Текст</div>
+											</details>
+											<details class="question-block__item">
+												<summary class="question-block__title">Остаются ли шрамы после увеличения груди?</summary>
+												<div class="question-block__body">Текст</div>
+											</details>
+											<details class="question-block__item">
+												<summary class="question-block__title">Какой период реабилитации после проведенной операции по увеличению груди?</summary>
+												<div class="question-block__body">Текст</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Подтяжка лица</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Полная абдоминопластика</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Ринопластика</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+								</div>
 							</div>
-							<div class="tabs-faq__body">
+							<div class="tabs-faq__body faq-category">
+								<div data-spollers class="faq-category__spollers spollers">
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Увеличение груди</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Грудные импланты</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Коррекция асимметрии</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Подтяжка груди (мастопексия)</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Интимная пластика</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Подтяжка лица</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Полная абдоминопластика</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+									<details class="faq-category__item spollers__item">
+										<summary class="faq-category__title spollers__title">Ринопластика</summary>
+										<div class="faq-category__body question-block spollers__content">
+											<details class="question-block__item">
+												<summary class="question-block__title">Можно ли сохранить способность к грудному вскармливаниюпосле увеличения груди?</summary>
+												<div class="question-block__body">Контент спойлера</div>
+											</details>
+										</div>
+									</details>
+								</div>
 							</div>
 						</div>
 					</div>
-
 					<div class="faq__consultation-form consultation-form">
 						<div class="consultation-form__container">
 							<form action="#" class="consultation-form__form">
@@ -422,7 +557,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240126031726"></script>
+	<script src="js/app.min.js?_v=20240126134155"></script>
 </body>
 
 </html>
