--- a/changes.html
+++ b/changes.html
@@ -256,7 +256,37 @@
 
 
 		<main class="page">
+			<div class="page__changes changes">
+				<div class="changes__container">
+					<h1 class="changes__title title">
+						Вопрос-ответ
+					</h1>
+					<div data-tabs class="changes__tabs tabs-changes">
+						<nav data-tabs-titles class="tabs-changes__navigation ">
+							<button type="button" class="tabs-faq__title _tab-active"><img src="img/faq/plastic.png" alt="image"><span>Пластика</span></button>
+							<button type="button" class="tabs-faq__title "><img src="img/faq/cosmetology.png" alt="image"><span>Косметология</span></button>
+							<button type="button" class="tabs-faq__title "><img src="img/faq/gynecology.png" alt="image"><span>Гинекология</span></button>
+						</nav>
+						<div data-tabs-body class="tabs-changes__content">
 
+						</div>
+					</div>
+					<div class="changes__consultation-form consultation-form">
+						<div class="consultation-form__container">
+							<form action="#" class="consultation-form__form">
+								<h2 class="consultation-form__title title">Записаться</h2>
+								<div class="consultation-form__inputs">
+									<input autocomplete="off" type="text" name="form[]" placeholder="Имя" class="consultation-form__input input">
+									<input autocomplete="off" type="text" name="form[]" placeholder="Телефон" class="consultation-form__input input">
+								</div>
+								<div class="consultation-form__confidentiality">Нажимая на кнопку, вы даете согласие на обработку данныхи соглашаетесь с<a href="#">Политикой конфиденциальности.</a></div>
+								<button type="submit" class="consultation-form__button btn btn_light">Заказать обратный звонок</button>
+							</form>
+							<img src="img/girl.jpg" class="consultation-form__image" alt="girl">
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
