--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		<ol class="rootpage__list">
 			<li><a target="_blank" href="home.html">Главная</a></li>
 			<li><a target="_blank" href="prices.html">Цена</a></li>
-			<li><a target="_blank" href="faq.html">Вопросы ответы</a></li>
+			<li><a target="_blank" href="faq.html">Вопросы-ответы</a></li>
+			<li><a target="_blank" href="search-page.html">Результаты поиска</a></li>
 			<li><a target="_blank" href="common.html">Повторяющиеся</a></li>
 		</ol>
 	</div>
