--- a/search-page.html
+++ b/search-page.html
@@ -256,7 +256,42 @@
 
 
 		<main class="page">
-
+			<div class="page__search search-page">
+				<div class="search-page__container">
+					<h1 class="search-page__title title">
+						Результаты поиска
+					</h1>
+					<form class="search-page__form" action="#">
+						<div class="search-page__wrapper">
+							<input autocomplete="off" type="text" name="form[]" placeholder="Увеличение" class="search-page__input input">
+							<button type="submit" class="search-page__button _icon-search"><span>Найти</span></button>
+						</div>
+						<div class="search-page__results">
+							Найдено <span>25</span> результатов
+						</div>
+					</form>
+					<div class="search-page__items">
+						<div class="search-page__item item-search">
+							<a href="#" class="item-search__title">Увеличение груди</a>
+							<div class="item-search__text">
+								Одним из направлений эстетической хирургии, на котором специализируются врачи клиники «ДОКТОРПЛАСТИК», является <a href="#" class="item-search__link">увеличение</a> груди. Пластические хирурги ...
+							</div>
+						</div>
+						<div class="search-page__item item-search">
+							<a href="#" class="item-search__title">Увеличение груди</a>
+							<div class="item-search__text">
+								Одним из направлений эстетической хирургии, на котором специализируются врачи клиники «ДОКТОРПЛАСТИК», является <a href="#" class="item-search__link">увеличение</a> груди. Пластические хирурги ...
+							</div>
+						</div>
+						<div class="search-page__item item-search">
+							<a href="#" class="item-search__title">Увеличение груди</a>
+							<div class="item-search__text">
+								Одним из направлений эстетической хирургии, на котором специализируются врачи клиники «ДОКТОРПЛАСТИК», является <a href="#" class="item-search__link">увеличение</a> груди. Пластические хирурги ...
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
