--- a/common.html
+++ b/common.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240126134155">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240126195431">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,9 @@
 	<div class="wrapper">
 		<header class="header">
 			<div class="header__container">
-				<input autocomplete="off" type="text" name="form[]" placeholder="Я ищу..." class="search__input">
+				<form class="search__form" action="#">
+					<input autocomplete="off" type="text" name="form[]" placeholder="Я ищу..." class="search__input">
+				</form>
 				<a data-da=".header__menu, 992, 0" href="#" class="header__logo"><img src="img/logo.svg" alt="logo"></a>
 				<div class="header__menu menu">
 					<button type="button" class="menu__icon icon-menu"><span></span></button>
@@ -59,7 +61,7 @@
 													<div class="service-menu__links">
 														<a href="#" class="service-menu__sub-link">Лифтинг средней зоны лица</a>
 														<a href="#" class="service-menu__sub-link">Блефаропластика (подтяжка век)</a>
-														<a href="#" class="service-menu__sub-link">Эндотины в эндоскопии лица</a>
+														<a href="#" class="service-menu__sub-link">Эндотины в эндоскопиилица</a>
 														<a href="#" class="service-menu__sub-link">Подтяжка лица</a>
 														<a href="#" class="service-menu__sub-link">Подтяжка лба и бровей</a>
 														<a href="#" class="service-menu__sub-link">Пластика шеи и подбородка</a>
@@ -265,7 +267,7 @@
 							<input autocomplete="off" type="text" name="form[]" placeholder="Имя" class="consultation-form__input input">
 							<input autocomplete="off" type="text" name="form[]" placeholder="Телефон" class="consultation-form__input input">
 						</div>
-						<div class="consultation-form__confidentiality">Нажимая на кнопку, вы даете согласие на обработку данныхи соглашаетесь с<a href="#">Политикой конфиденциальности.</a></div>
+						<div class="consultation-form__confidentiality">Нажимая на кнопку, вы даете согласие на обработку данныхи соглашаетесь с <a href="#"> Политикой конфиденциальности.</a></div>
 						<button type="submit" class="consultation-form__button btn btn_light">Заказать обратный звонок</button>
 					</form>
 					<img src="img/girl.jpg" class="consultation-form__image" alt="girl">
@@ -337,7 +339,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240126134155"></script>
+	<script src="js/app.min.js?_v=20240126195431"></script>
 </body>
 
 </html>
