--- a/error.html
+++ b/error.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Common</title>
+	<title>HomePage</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -258,31 +258,12 @@
 
 
 		<main class="page">
-			<!-- btn -->
-			<a href="#" class="btn btn_dark">Text</a>
-			<!-- form -->
-			<div class="consultation-form">
-				<div class="consultation-form__container">
-					<form action="#" class="consultation-form__form">
-						<h2 class="consultation-form__title title">Записаться</h2>
-						<div class="consultation-form__inputs">
-							<input autocomplete="off" type="text" name="form[]" placeholder="Имя" class="consultation-form__input input">
-							<input autocomplete="off" type="text" name="form[]" placeholder="Телефон" class="consultation-form__input input">
-						</div>
-						<div class="consultation-form__confidentiality">Нажимая на кнопку, вы даете согласие на обработку данныхи соглашаетесь с <a href="#"> Политикой конфиденциальности.</a></div>
-						<button type="submit" class="consultation-form__button btn btn_light">Заказать обратный звонок</button>
-					</form>
-					<img src="img/girl.jpg" class="consultation-form__image" alt="girl">
+			<div class="page__error error-page">
+				<div class="error-page__container">
+					<img src="img/404.png" alt="error" class="error-page__image">
+					<div class="error-page__label">Страница не найдена</div>
+					<button type="button" class="error-page__btn btn btn_light">На главную</button>
 				</div>
-			</div>
-			<!-- spollers -->
-			<div data-spollers class="spollers">
-				<details class="spollers__item">
-					<summary class="spollers__title">Пластическая хирургия</summary>
-					<div data-spollers class="spollers__content">
-
-					</div>
-				</details>
 			</div>
 		</main>
 		<footer class="footer">
