--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 			<li><a target="_blank" href="prices.html">Цена</a></li>
 			<li><a target="_blank" href="faq.html">Вопросы-ответы</a></li>
 			<li><a target="_blank" href="search-page.html">Результаты поиска</a></li>
+			<li><a target="_blank" href="error.html">Страница ошибки (Вариант 1)</a></li>
+			<li><a target="_blank" href="404.html">Страница ошибки (Вариант 2)</a></li>
+			<li><a target="_blank" href="changes.html">До и После - выбор услуги</a></li>
+			<li><a target="_blank" href="plasticsurgery-page.html">Пластическая хирургия</a></li>
 			<li><a target="_blank" href="common.html">Повторяющиеся</a></li>
 		</ol>
 	</div>
