--- a/plasticsurgery-page.html
+++ b/plasticsurgery-page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Common</title>
+	<title>HomePage</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
@@ -258,31 +258,228 @@
 
 
 		<main class="page">
-			<!-- btn -->
-			<a href="#" class="btn btn_dark">Text</a>
-			<!-- form -->
-			<div class="consultation-form">
-				<div class="consultation-form__container">
-					<form action="#" class="consultation-form__form">
-						<h2 class="consultation-form__title title">Записаться</h2>
-						<div class="consultation-form__inputs">
-							<input autocomplete="off" type="text" name="form[]" placeholder="Имя" class="consultation-form__input input">
-							<input autocomplete="off" type="text" name="form[]" placeholder="Телефон" class="consultation-form__input input">
+			<div class="page__plasticsurgery-page plasticsurgery-page">
+				<div class="plasticsurgery-page__container">
+					<h1 class="plasticsurgery-page__title title">
+						До и После
+					</h1>
+					<div data-tabs class="plasticsurgery-page__tabs tabs-plasticsurgery">
+						<nav data-tabs-titles class="tabs-plasticsurgery__navigation">
+							<button type="button" class="tabs-plasticsurgery__title _tab-active"><img src="img/changes/chest.png" alt="image"><span>Грудь</span></button>
+							<button type="button" class="tabs-plasticsurgery__title "><img src="img/changes/face.png" alt="image"><span>Лицо</span></button>
+							<button type="button" class="tabs-plasticsurgery__title "><img src="img/changes/body.png" alt="image"><span>Тело</span></button>
+							<button type="button" class="tabs-plasticsurgery__title "><img src="img/changes/mini-plastic.png" alt="image"><span>Мини-пластика</span></button>
+						</nav>
+						<div data-tabs-body class="tabs-plasticsurgery__content">
+							<div class="tabs-plasticsurgery__body ">
+								<div class="changes-links">
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Увеличение груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Подтяжка груди (мастопексия)</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Повторная пластика груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Коррекция асимметрии</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Уменьшение груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Липофилинг груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Коррекция тубулярности груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">3D-form</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Грудные импланты</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Пластика груди после мастэктомии</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="tabs-plasticsurgery__body ">
+								<div class="changes-links">
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Увеличение груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Подтяжка груди (мастопексия)</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Повторная пластика груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Коррекция асимметрии</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Уменьшение груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Липофилинг груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Коррекция тубулярности груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">3D-form</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Грудные импланты</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Пластика груди после мастэктомии</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+								</div>
+							</div>
+							<div class="tabs-plasticsurgery__body ">
+								<div class="changes-links">
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Увеличение груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Подтяжка груди (мастопексия)</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Повторная пластика груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Коррекция асимметрии</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Уменьшение груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Липофилинг груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Коррекция тубулярности груди</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">3D-form</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Грудные импланты</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+									<a href="#" class="changes-links__item">
+										<h3 class="changes-links__title">Пластика груди после мастэктомии</h3>
+										<div class="changes-links__image">
+											<img src="img/changes/girl.jpg" alt="girl">
+										</div>
+									</a>
+								</div>
+							</div>
 						</div>
-						<div class="consultation-form__confidentiality">Нажимая на кнопку, вы даете согласие на обработку данныхи соглашаетесь с <a href="#"> Политикой конфиденциальности.</a></div>
-						<button type="submit" class="consultation-form__button btn btn_light">Заказать обратный звонок</button>
-					</form>
-					<img src="img/girl.jpg" class="consultation-form__image" alt="girl">
-				</div>
-			</div>
-			<!-- spollers -->
-			<div data-spollers class="spollers">
-				<details class="spollers__item">
-					<summary class="spollers__title">Пластическая хирургия</summary>
-					<div data-spollers class="spollers__content">
-
 					</div>
-				</details>
+					<div class="plasticsurgery-page__consultation-form consultation-form">
+						<div class="consultation-form__container">
+							<form action="#" class="consultation-form__form">
+								<h2 class="consultation-form__title title">Записаться</h2>
+								<div class="consultation-form__inputs">
+									<input autocomplete="off" type="text" name="form[]" placeholder="Имя" class="consultation-form__input input">
+									<input autocomplete="off" type="text" name="form[]" placeholder="Телефон" class="consultation-form__input input">
+								</div>
+								<div class="consultation-form__confidentiality">Нажимая на кнопку, вы даете согласие на обработку данныхи соглашаетесь с<a href="#">Политикой конфиденциальности.</a></div>
+								<button type="submit" class="consultation-form__button btn btn_light">Заказать обратный звонок</button>
+							</form>
+							<img src="img/girl.jpg" class="consultation-form__image" alt="girl">
+						</div>
+					</div>
+				</div>
 			</div>
 		</main>
 		<footer class="footer">
