--- a/search-page.html
+++ b/search-page.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240127035201">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240127184711">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -265,7 +265,7 @@
 					</h1>
 					<form class="search-page__form" action="#">
 						<div class="search-page__wrapper">
-							<input autocomplete="off" type="text" name="result" placeholder="Я ищу..." class="search-page__input input">
+							<input autocomplete="off" type="text" name="q" placeholder="Я ищу..." class="search-page__input input">
 							<button type="submit" class="search-page__button _icon-search"><span>Найти</span></button>
 						</div>
 						<div class="search-page__results">
@@ -292,7 +292,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="pagging">
+					<div class="search-page__pagging pagging">
 						<a href="" class="pagging__arrow pagging__arrow_left"></a>
 						<ul class="pagging__list">
 							<li>
@@ -372,7 +372,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240127035201"></script>
+	<script src="js/app.min.js?_v=20240127184711"></script>
 </body>
 
 </html>
