--- a/plasticsurgery-page.html
+++ b/plasticsurgery-page.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20240127184711">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240128030009">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -261,7 +261,7 @@
 			<div class="page__plasticsurgery-page plasticsurgery-page">
 				<div class="plasticsurgery-page__container">
 					<h1 class="plasticsurgery-page__title title">
-						До и После
+						Пластическая хирургия
 					</h1>
 					<div data-tabs class="plasticsurgery-page__tabs tabs-plasticsurgery">
 						<nav data-tabs-titles class="tabs-plasticsurgery__navigation">
@@ -465,6 +465,163 @@
 							</div>
 						</div>
 					</div>
+					<div class="plasticsurgery-page__info info-plasticsurgery">
+						<div class="info-plasticsurgery__content">
+							<h2 class="info-plasticsurgery__title">
+								О пластике груди
+							</h2>
+							<div class="info-plasticsurgery__text">
+								<p>С помощью пластической хирургии сегодня можно выполнить коррекцию женской груди. Так, есть возможность изменить размер, устранить асимметрию, вернуть упругость, провести моделирование формы и объема. </p>
+								<p>Клиника «ДОКТОРПЛАСТИК» проводит все виды пластики груди. Каждая вторая операция по коррекции формы и размера груди в Москве и каждая пятая в Россиипроводится нашими специалистами.</p>
+							</div>
+							<div class="info-plasticsurgery__advantages">
+								<div class="info-plasticsurgery__item">
+									<img src="img/plasticsurgery/honey.png" alt="icon" class="info-plasticsurgery__icon">
+									<div class="info-plasticsurgery__info">Уникальные запатентованные методики</div>
+								</div>
+								<div class="info-plasticsurgery__item">
+									<img src="img/plasticsurgery/health-care.png" alt="icon" class="info-plasticsurgery__icon">
+									<div class="info-plasticsurgery__info">Максимальная безопасность пациентов</div>
+								</div>
+								<div class="info-plasticsurgery__item">
+									<img src="img/plasticsurgery/surgical-instrument.png" alt="icon" class="info-plasticsurgery__icon">
+									<div class="info-plasticsurgery__info">Самое современное оборудование</div>
+								</div>
+								<div class="info-plasticsurgery__item">
+									<img src="img/plasticsurgery/clipboard-activity.png" alt="icon" class="info-plasticsurgery__icon">
+									<div class="info-plasticsurgery__info">Минимальный реабилитационный период</div>
+								</div>
+							</div>
+						</div>
+						<img class="info-plasticsurgery__img" src="img/plasticsurgery/girl.png" alt="girl">
+					</div>
+					<div class="plasticsurgery-page__consultation-block consultation-block">
+						<div class="consultation-block__content">
+							<h3 class="consultation-block__title">
+								К кому записаться?
+							</h3>
+							<div class="consultation-block__navigation">
+								<div class="consultation-block__arrow-left"></div>
+								<div class="consultation-block__arrow-right"></div>
+							</div>
+						</div>
+						<div class="consultation-block__slider swiper">
+							<div class="consultation-block__wrapper swiper-wrapper">
+								<div class="consultation-block__slide swiper-slide">
+									<article class="consultation-block__card">
+										<a href="#" class="consultation-block__image">
+											<img src="img/specialists/02.jpg" alt="image">
+											<div class="consultation-block__operations">
+												<span>20 000+</span> операций
+											</div>
+										</a>
+										<div class="consultation-block__more">
+											<div class="consultation-block__author">
+												<h3 class="consultation-block__surname">Сергеев</h3>
+												<img src="img/verification.png" alt="verification">
+											</div>
+											<div class="consultation-block__name">Илья Вячеславович</div>
+											<div class="consultation-block__description">
+												Основатель клиники «ДокторПластик», пластический хирург, профессор, основатель собственной школы маммопластики.
+											</div>
+											<a href="#" class="consultation-block__btn btn btn_light">Записаться на консультацию</a>
+										</div>
+										<div class="consultation-block__less">
+											<div class="consultation-block__author">
+												<h3 class="consultation-block__surname">Сергеев</h3>
+												<img src="img/verification.png" alt="verification">
+											</div>
+											<div class="consultation-block__name">Илья Вячеславович</div>
+										</div>
+									</article>
+								</div>
+								<div class="consultation-block__slide swiper-slide">
+									<article class="consultation-block__card">
+										<a href="#" class="consultation-block__image">
+											<img src="img/specialists/02.jpg" alt="image">
+											<div class="consultation-block__operations">
+												<span>20 000+</span> операций
+											</div>
+										</a>
+										<div class="consultation-block__more">
+											<div class="consultation-block__author">
+												<h3 class="consultation-block__surname">Сергеев</h3>
+												<img src="img/verification.png" alt="verification">
+											</div>
+											<div class="consultation-block__name">Илья Вячеславович</div>
+											<div class="consultation-block__description">
+												Основатель клиники «ДокторПластик», пластический хирург, профессор, основатель собственной школы маммопластики.
+											</div>
+											<a href="#" class="consultation-block__btn btn btn_light">Записаться на консультацию</a>
+										</div>
+										<div class="consultation-block__less">
+											<div class="consultation-block__author">
+												<h3 class="consultation-block__surname">Сергеев</h3>
+												<img src="img/verification.png" alt="verification">
+											</div>
+											<div class="consultation-block__name">Илья Вячеславович</div>
+										</div>
+									</article>
+								</div>
+								<div class="consultation-block__slide swiper-slide">
+									<article class="consultation-block__card">
+										<a href="#" class="consultation-block__image">
+											<img src="img/specialists/02.jpg" alt="image">
+											<div class="consultation-block__operations">
+												<span>20 000+</span> операций
+											</div>
+										</a>
+										<div class="consultation-block__more">
+											<div class="consultation-block__author">
+												<h3 class="consultation-block__surname">Сергеев</h3>
+												<img src="img/verification.png" alt="verification">
+											</div>
+											<div class="consultation-block__name">Илья Вячеславович</div>
+											<div class="consultation-block__description">
+												Основатель клиники «ДокторПластик», пластический хирург, профессор, основатель собственной школы маммопластики.
+											</div>
+											<a href="#" class="consultation-block__btn btn btn_light">Записаться на консультацию</a>
+										</div>
+										<div class="consultation-block__less">
+											<div class="consultation-block__author">
+												<h3 class="consultation-block__surname">Сергеев</h3>
+												<img src="img/verification.png" alt="verification">
+											</div>
+											<div class="consultation-block__name">Илья Вячеславович</div>
+										</div>
+									</article>
+								</div>
+								<div class="consultation-block__slide swiper-slide">
+									<article class="consultation-block__card">
+										<a href="#" class="consultation-block__image">
+											<img src="img/specialists/02.jpg" alt="image">
+											<div class="consultation-block__operations">
+												<span>20 000+</span> операций
+											</div>
+										</a>
+										<div class="consultation-block__more">
+											<div class="consultation-block__author">
+												<h3 class="consultation-block__surname">Сергеев</h3>
+												<img src="img/verification.png" alt="verification">
+											</div>
+											<div class="consultation-block__name">Илья Вячеславович</div>
+											<div class="consultation-block__description">
+												Основатель клиники «ДокторПластик», пластический хирург, профессор, основатель собственной школы маммопластики.
+											</div>
+											<a href="#" class="consultation-block__btn btn btn_light">Записаться на консультацию</a>
+										</div>
+										<div class="consultation-block__less">
+											<div class="consultation-block__author">
+												<h3 class="consultation-block__surname">Сергеев</h3>
+												<img src="img/verification.png" alt="verification">
+											</div>
+											<div class="consultation-block__name">Илья Вячеславович</div>
+										</div>
+									</article>
+								</div>
+							</div>
+						</div>
+					</div>
 					<div class="plasticsurgery-page__consultation-form consultation-form">
 						<div class="consultation-form__container">
 							<form action="#" class="consultation-form__form">
@@ -538,7 +695,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20240127184711"></script>
+	<script src="js/app.min.js?_v=20240128030009"></script>
 </body>
 
 </html>
