--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			<li><a target="_blank" href="404.html">Страница ошибки (Вариант 2)</a></li>
 			<li><a target="_blank" href="changes.html">До и После - выбор услуги</a></li>
 			<li><a target="_blank" href="plasticsurgery-page.html">Пластическая хирургия</a></li>
+			<li><a target="_blank" href="news.html">Новости</a></li>
 			<li><a target="_blank" href="common.html">Повторяющиеся</a></li>
 		</ol>
 	</div>
